Changes in different sections

--- a/src/container/Team/Team.css
+++ b/src/container/Team/Team.css
@@ -12,17 +12,27 @@
     text-align: center;
     margin-bottom: 40px;
   }
-
+  /* .about__heading {
+    font-size: 2.5rem;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 3rem;
+    margin-top: 1rem;
+    color: #fff;
+  } */
   .section-title h2 {
     font-size: 2.5rem;
-    margin-bottom: 10px;
-    color: white;
+    font-weight: bold;
+    text-align: center;
+    font-family: 'Poppins';
+    margin-bottom: 3rem;
+    color: #fff;
   }
 
   .section-divider {
     width: 60px;
     height: 1px;
-    background-color: #eff5fa;
+    background-color: #4a4b4b;
     margin: 0 auto;
     border-radius: 2px;
   }
@@ -60,12 +70,14 @@
   
   .team-member h3 {
     font-size: 1.2rem;
+    font-family: 'Poppins';
     margin: 10px 0 5px;
     color: #fff;
   }
   
   .team-member p {
     font-size: 0.95rem;
+    font-family: 'Roboto';
     color: #A2A2A2;
   }
   
@@ -82,14 +94,19 @@
   
   .about-block h5 {
     font-size: 1.1rem;
+    font-family: 'Poppins';
     color: #fff;
+    margin-left: 3rem;
     margin-bottom: 10px;
   }
   
   .about-block h3,
   .about-block p {
     font-size: 1rem;
+    font-family: 'Roboto';
     line-height: 1.6;
+    margin-left: 3rem;
+    margin-right: 3rem;
     color: #A2A2A2;
   }
   
