--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,26 +1,20 @@
 .navbar {
-  background-color: #1d1d1d;
+  background-color: rgb(51, 51, 51);
+ 
   padding: 16px 2px;
-  position: fixed; /* make it fixed */
+  position: fixed; 
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 9999; /* high z-index to stay above everything */
-  height: 50px; /* standard height */
+  z-index: 9999; 
+  height: 50px; 
 }
 
-/* .navbar {
-  background-color: #1d1d1d;
- 
-  padding: 16px 24px;
-  position: relative;
-  height: 42px; 
-  overflow: hidden; 
-} */
-  
+
 .navbar-container {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 0 30px;
   display: flex;
   justify-content: space-between;
   align-items: center; 
@@ -28,20 +22,23 @@
 }
   
   .navbar img {
-    height: 100px; 
+    
+    height: 70px;
+    margin-left: 45px;
     object-fit: contain;
   }
   .navbar-links a,
 .navbar-links .active {
   color: #fff;
+  font-family: "Montserrat", sans-serif;
   text-decoration: none;
   transition: color 0.3s;
 }
 
 .navbar-links a:hover,
 .navbar-links .active {
-  color: #ac7818; /* orange highlight */
-  font-weight: bold;
+  color: #f39c12; 
+ 
 }
 
   
@@ -96,11 +93,12 @@
       position: static;
       background-color: transparent;
       box-shadow: none;
-      padding: 0;
+      padding: 0 40px;
     }
   
     .navbar-links a {
       margin-left: 24px;
+      color: aliceblue;
       display: inline-block;
     }
   
