--- a/src/container/About/About.css
+++ b/src/container/About/About.css
@@ -1,10 +1,11 @@
 .app__about {
-    background-color: #272222;
+    background-color: #212121;
     padding: 4rem 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+    scroll-margin-top: 60px;
   }
   .about__heading {
     font-size: 2.5rem;
@@ -33,15 +34,20 @@
   
   .headtext__cormorant {
     font-size: 1.5rem;
-    font-weight: bold;
+    font-weight: 100;
+    font-family: 'Poppins';
     margin-bottom: 1rem;
     margin-top: -1rem;
-    color: #cbc9c9;
+    margin-left: 2.5rem;
+    color: #fff;
   }
   
   .p__opensans {
     font-size: 1rem;
+    font-family: 'Roboto';
     line-height: 1.7;
+    margin-left: 2.5rem;
+    margin-right: 2rem;
     color: #bab3b3;
   }
   
