--- a/src/container/Contact/Contact.css
+++ b/src/container/Contact/Contact.css
@@ -11,23 +11,32 @@
   }
   
   .section-title h2 {
-    font-size: 28px;
-    font-weight: 400;
-    margin-bottom: 20px;
+    font-size: 2.5rem;
+    font-weight: bold;
+    text-align: center;
+    font-family: 'Poppins';
+    margin-bottom: 10px;
+    color: #fff;
   }
+  
   
   .section-divider {
     display: block;
-    width: 60px;
+    width: 80px;
     height: 1px;
-    background: #eff5fa;
-    margin: 10px auto;
+    background: #5b5b5b;
+    margin: 10px auto 30px;
+  }
+  .section-divider.below-heading {
+    margin-top: 0;
+    margin-bottom: 20px;
   }
   
   .section-title p {
     max-width: 600px;
     margin: 10px auto;
     font-size: 1.5rem;
+    font-family: 'Roboto';
     color: #A2A2A2;
   }
   
@@ -51,6 +60,7 @@
     padding: 25px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+    margin-left: 5px;
   }
   
   .form-group {
@@ -74,6 +84,7 @@
     font-size: 16px;
     border-radius: 18px;
     cursor: pointer;
+    margin-left: 15px;
   }
   
   .btn:hover {
