--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -1,12 +1,27 @@
+
 .header-section {
   position: relative;
   height: 100vh;
   overflow: hidden;
   color: white;
-  padding-top: 80px;
+  padding-top: 50px;
+  padding-bottom: 20px; 
+  background: -webkit-linear-gradient(left, #f39c12 0%, #e67e22 35%, #fca314 66%, #f1c40f 100%);
+  background: linear-gradient(to right, #f39c12 0%, #e67e22 35%, #fca314 66%, #f1c40f 100%);
+  
 }
 
-.bg-video {
+#tsparticles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+
+/* .bg-video {
   position: absolute;
   top: 0;
   left: 0;
@@ -14,35 +29,52 @@
   height: 100%;
   object-fit: cover;
   z-index: -1;
-}
+} */
 
 .header-overlay {
   position: absolute;
+  
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-  padding: 0rem 5rem;
+  padding: 0rem 4rem;
   max-width: 900px;
+
+  opacity: 0;
+  animation: fadeInUpCentered 1s ease-out forwards;
+  animation-delay: 0.3s;
 }
 
 .header-overlay h1 {
+  font-family: 'Poppins';
   font-size: 3.5rem;
-  line-height: 1.3;
+  line-height: 1;
   margin-bottom: 2rem;
+  
+
+}
+.header-overlay h1 strong {
+  font-size: 1.4em; 
+  font-weight: 800;
+  color: #fff; 
 }
 
 .tagline {
   font-size: 1.25rem;
-  font-weight: 300;
+  
 }
 
 .scroll-icons {
-  margin-top: 20px;
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
   text-align: center;
   cursor: pointer;
-  animation: bounce 2s infinite;
+  animation: bounce infinite;
 }
+
 
 .mouse-icon, .down-icon {
   display: block;
@@ -65,13 +97,13 @@
   }
 }
 
-@keyframes fadeInUp {
+@keyframes fadeInUpCentered {
   0% {
-    transform: translateY(40px);
+    transform: translate(-50%, -40%); /* Still center-based */
     opacity: 0;
   }
   100% {
-    transform: translateY(0);
+    transform: translate(-50%, -50%);
     opacity: 1;
   }
 }
