--- a/src/container/Products/Products.css
+++ b/src/container/Products/Products.css
@@ -1,30 +1,41 @@
 .products-section {
-    padding: 60px 60px; /* Increased horizontal padding */
+    padding: 60px 60px;
     background-color: #1d1d1d;
-    scroll-margin-top: 100px;
+    scroll-margin-top: 80px;
   }
+  /* .about__heading {
+    font-size: 2.5rem;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 3rem;
+    margin-top: 1rem;
+    color: #fff; */
   
   .section-title {
     text-align: center;
+    font-weight: bold;
     font-size: 2.5rem;
-    margin-bottom: 40px;
-    color: #A2A2A2;
+    font-family: 'Poppins';
+    margin-bottom: 3rem;
+    color: #fff;
   }
   
   .cards-wrapper {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* Exactly 3 cards per row */
-    gap: 25px; /* Increased space between cards */
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 15px;
     max-width: 1200px;
-    margin: 0 auto; /* Center the cards block */
+    margin: 0 auto;
+    margin-right: 6px;
   }
   
   .product-card {
-    background: #212121;
+    background: #272727;
     border-radius: 12px;
     padding: 30px 25px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease;
+    margin-left: 1rem;
   }
   
   .product-card:hover {
@@ -33,18 +44,31 @@
   
   .card-title {
     font-size: 1.6rem;
+    font-weight: 100;
     margin-bottom: 15px;
-    color: #A2A2A2;
+    font-family: 'Poppins';
+    color: #fff;
   }
-  
   .card-points {
-    list-style-type: disc;
+    list-style: none;
+    font-family: 'Roboto';
     padding-left: 20px;
   }
   
+  .card-points li::before {
+    content: '⤚'; 
+    color: #918e8e;
+    margin-right: 8px;
+  }
+  /* .card-points {
+    list-style-type: disc;
+    font-family: 'Roboto';
+    padding-left: 20px;
+  } */
+  
   .card-points li {
     margin-bottom: 8px;
-    color: #A2A2A2;
+    color: #e3dfdf;
   }
 
   @media (max-width: 1024px) {
