Add Brands and Testimonial Sections with some other changes

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -30,7 +30,7 @@
   .navbar-links a,
 .navbar-links .active {
   color: #fff;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-decoration: none;
   transition: color 0.3s;
 }
