--- a/src/container/About/About.css
+++ b/src/container/About/About.css
@@ -6,6 +6,7 @@
     align-items: center;
     gap: 2rem;
     scroll-margin-top: 60px;
+    border-bottom: 1px solid #f39c12;
   }
   .about__heading {
     font-size: 2.5rem;
@@ -35,7 +36,7 @@
   .headtext__cormorant {
     font-size: 1.5rem;
     font-weight: 100;
-    font-family: 'Poppins';
+    font-family: 'Poppins' , sans-serif;
     margin-bottom: 1rem;
     margin-top: -1rem;
     margin-left: 2.5rem;
@@ -44,7 +45,7 @@
   
   .p__opensans {
     font-size: 1rem;
-    font-family: 'Roboto';
+    font-family: 'Roboto' , sans-serif;
     line-height: 1.7;
     margin-left: 2.5rem;
     margin-right: 2rem;
