--- a/src/container/Products/Products.css
+++ b/src/container/Products/Products.css
@@ -24,7 +24,7 @@
   .cards-wrapper {
     display: grid;
     grid-template-columns: repeat(3, 1fr); 
-    gap: 15px;
+    gap: 15px 0px;
     max-width: 1200px;
     margin: 0 auto;
     margin-right: 6px;
