--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -56,7 +56,7 @@
 
 .header-overlay h1 {
   font-family: 'Poppins', sans-serif;
-  font-style: italic;
+  font-style: bold;
   font-size: 2.5rem;
   line-height: 1;
   margin-bottom: 2rem;
